<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Oleg Kan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:divider="@drawable/divider_horizontal"
        android:dividerPadding="@dimen/divider_horizontal_margin"
        android:showDividers="middle"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/section_vertical_margin"
            android:layout_marginTop="@dimen/section_vertical_margin"
            android:src="@drawable/ic_golden_hour"
            />

        <TextView
            android:id="@+id/thank_you_message"
            style="@style/Text.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/thank_you_message"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/other_ways_to_support"
                style="@style/Text.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_ways_to_support_message"
                />

            <com.simplaapliko.design.widget.MenuItemView
                android:id="@+id/rate_tile"
                style="@style/Tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_star"
                app:primaryText="@string/rate_golden_hour_header"
                />

            <com.simplaapliko.design.widget.MenuItemView
                android:id="@+id/beta_group_tile"
                style="@style/Tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_beta"
                app:primaryText="@string/join_beta_group_header"
                app:secondaryText="@string/join_beta_group_description"
                />

            <com.simplaapliko.design.widget.MenuItemView
                android:id="@+id/translate_tile"
                style="@style/Tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_translate"
                app:primaryText="@string/translate_header"
                app:secondaryText="@string/translate_description"
                />

            <com.simplaapliko.design.widget.MenuItemView
                android:id="@+id/feedback_tile"
                style="@style/Tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_email"
                app:primaryText="@string/send_feedback_header"
                app:secondaryText="@string/send_feedback_description"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
